--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="menu">
         <img class="menu__imagen"
             src="https://cdn.discordapp.com/avatars/542879126550216706/a895cc29e38bf5299c445ef848d742bf.webp?size=1024"
-            alt="">
+            alt="avatar de alvax menu" draggable="false">
         <ul class="menu__lista lista">
             <li class="menu__lista-item responsive"><a href="">X</a></li>
             <li class="menu__lista-item"><a href="">Quien soy</a></li>
