margins, paddings y col pie

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <div class="float">
+
+    </div>
     <nav class="menu">
         <img class="menu__imagen"
             src="https://cdn.discordapp.com/avatars/542879126550216706/a895cc29e38bf5299c445ef848d742bf.webp?size=1024"
@@ -21,13 +24,10 @@
         </ul>
     </nav>
     <main class="main">
-        <!-- contenedor PADRE -->
         <div class="main__yo">
-            <!-- objecto -->
             <h1 class="main__yo__h1">
-                <!-- item -->
                 Mi primera pagina
-            </h1> <!-- TITULO -->
+            </h1> 
             <p class="main__yo__desc">
                 Hola, yo soy Alvaro, pero pueden llamarme alvax. Esta es mi primera pagina web
             </p>
@@ -37,7 +37,6 @@
                 src="https://cdn.discordapp.com/avatars/542879126550216706/a895cc29e38bf5299c445ef848d742bf.webp?size=1024"
                 alt="avatar de alvax" draggable="false">
         </div>
-
     </main>
 
     <section class="info">
