--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <p class="info__par1">
                 De momento, estos son los lenguajes que manejo:
             </p>
-            <ul class="lista lenguajes">
-                <li>
+            <div class="lista lenguajes">
+                <div class="lenguajes__a">
                     <h2 class="info__head2">
                         C
                     </h2>
@@ -62,23 +62,15 @@
                         C fue el primer lenguaje que me ensenharon en la universidad y, creo, que lo domino a buen
                         nivel.
                     </p>
-                </li>
-                <li>
-                    <h2 class="info__head2">C++</h2>
-                    <p class="info__par">
-                        Intermedio.
-                        Actualmente estoy aprendiendo C++, mas todavia no hemos visto a profundidad la parte de
-                        programacion orientada a objetos
-                    </p>
-                </li>
-                <li>
+                </div>
+                <div class="lenguajes__b">
                     <h2 class="info__head2">Oracle SQL</h2>
                     <p class="info__par">
                         Intermedio/Avanzado.
                         Como parte del curso de bases de datos, aprendi el SQL de Oracle. Tambien lo se a buen nivel.
                     </p>
-                </li>
-                <li>
+                </div>
+                <div class="lenguajes__c">
                     <h2 class="info__head2">Python</h2>
                     <p class="info__par">
                         Basico/Intermedio.
@@ -86,16 +78,8 @@
                         puede entender un codigo hecho en Python, por lo que es usado a veces. No obstante, al no usarlo
                         frecuentemente, no se muchas de las funciones que hay en sus packages.
                     </p>
-                </li>
-                <li>
-                    <h2 class="info__head2">Julia</h2>
-                    <p class="info__par">
-                        Basico/Intermedio.
-                        El semestre pasado tuvimos que aprender un lenguaje de programacion escogido al azar y me toco
-                        Julia. Es bastante similar a Python.
-                    </p>
-                </li>
-            </ul>
+                </div>
+            </div>
         </article>
     </section>
     <footer class="pie">
