Co-authored-by: Kamerr Ezz <KamerrEzz@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -24,18 +24,23 @@
         </ul>
     </nav>
     <main class="main">
-        <div class="main__yo">
-            <h1 class="main__yo__h1">
-                Mi primera pagina
-            </h1> 
-            <p class="main__yo__desc">
-                Hola, yo soy Alvaro, pero pueden llamarme alvax. Esta es mi primera pagina web
-            </p>
+        <div class="bg">
+
         </div>
-        <div class="main__avatar">
-            <img class="main__avatar__img"
-                src="https://cdn.discordapp.com/avatars/542879126550216706/a895cc29e38bf5299c445ef848d742bf.webp?size=1024"
-                alt="avatar de alvax" draggable="false">
+        <div class="main__text">
+            <div class="main__yo">
+                <h1 class="main__yo__h1">
+                    Mi primera pagina
+                </h1>
+                <p class="main__yo__desc">
+                    Hola, yo soy Alvaro, pero pueden llamarme alvax. Esta es mi primera pagina web
+                </p>
+            </div>
+            <div class="main__avatar">
+                <img class="main__avatar__img"
+                    src="https://cdn.discordapp.com/avatars/542879126550216706/a895cc29e38bf5299c445ef848d742bf.webp?size=1024"
+                    alt="avatar de alvax" draggable="false">
+            </div>
         </div>
     </main>
 
