--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
     <footer class="pie">
         <p>Copyright 2022 ~ Agradecimiento a Kamerr que hizo esto posible</p>
     </footer>
+    <script src="./cosita.js"></script>
 </body>
 
 </html>
