mini-cambios en marcado

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -46,22 +46,22 @@
 
     <section class="info">
         <article>
-            <h1 class="info__head">Quien soy?</h1>
+            <h2 class="info__head">Quien soy?</h2>
             <p class="info__par1">
                 Naci en Lima, Peru hace 20 años. Actualmente, soy un estudiante de Ingenieria Informatica que esta
                 aprendiendo desarrollo web.
             </p>
         </article>
         <article>
-            <h1 class="info__head">Lenguajes</h1>
+            <h2 class="info__head">Lenguajes</h2>
             <p class="info__par1">
                 De momento, estos son los lenguajes que manejo:
             </p>
             <ul class="lista lenguajes">
                 <li>
-                    <h2 class="info__head2">
+                    <h3 class="info__head2">
                         C
-                    </h2>
+                    </h3>
                     <p class="info__par">
                         Intermedio/Avanzado. <br>
                         C fue el primer lenguaje que me ensenharon en la universidad y, creo, que lo domino a buen
@@ -69,7 +69,7 @@
                     </p>
                 </li>
                 <li>
-                    <h2 class="info__head2">C++</h2>
+                    <h3 class="info__head2">C++</h3>
                     <p class="info__par">
                         Intermedio.
                         Actualmente estoy aprendiendo C++, mas todavia no hemos visto a profundidad la parte de
@@ -77,14 +77,14 @@
                     </p>
                 </li>
                 <li>
-                    <h2 class="info__head2">Oracle SQL</h2>
+                    <h3 class="info__head2">Oracle SQL</h3>
                     <p class="info__par">
                         Intermedio/Avanzado.
                         Como parte del curso de bases de datos, aprendi el SQL de Oracle. Tambien lo se a buen nivel.
                     </p>
                 </li>
                 <li>
-                    <h2 class="info__head2">Python</h2>
+                    <h3 class="info__head2">Python</h3>
                     <p class="info__par">
                         Basico/Intermedio.
                         Aunque nunca me he "sentado" a aprenderlo, se da por hecho de que un estudiante de mi carrera
@@ -93,7 +93,7 @@
                     </p>
                 </li>
                 <li>
-                    <h2 class="info__head2">Julia</h2>
+                    <h3 class="info__head2">Julia</h3>
                     <p class="info__par">
                         Basico/Intermedio.
                         El semestre pasado tuvimos que aprender un lenguaje de programacion escogido al azar y me toco
