--- a/index.html
+++ b/index.html
@@ -11,22 +11,46 @@
     <!-- .container | .item*8{$} -->
     <!-- emmet: autocompletado en vscode. permite escribir html -->
     <div class="container">
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-        <div class="item shrink">4</div>
-        <div class="item">5</div>
-        <div class="item">6</div>
-        <div class="item self">7</div>
-        <div class="item">8</div>
-        <div class="item">9</div>
-        <div class="item">10</div>
-        <div class="item">11</div>
-        <div class="item">12</div>
-        <div class="item">13</div>
-        <div class="item">14</div>
-        <div class="item">15</div>
-        <div class="item shrink">16</div>
+        <div class="item header">1</div>
+        <div class="item sidebar">2</div>
+        <div class="item main">3</div>
+        <div class="item footer">4</div>
     </div>
+
+    <!-- TABLE person -->
+    <!-- id | name | age -->
+
+    <table>
+        <tr>
+            <th>id</th>
+            <th>name</th>
+            <th>age</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>John</td>
+            <td>20</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Mike</td>
+            <td>30</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>David</td>
+            <td>40</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Paul</td>
+            <td>50</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>Mark</td>
+            <td>60</td>
+        </tr>
+    </table>
 </body>
 </html>
