--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8"> <!-- unicode -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- compatilbidad -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alvax | Inicio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    
 
     <!-- 
         TAREA: armar una buena estructura de la pagina
@@ -41,10 +42,11 @@
             </ul>
         </nav>
      </header>
+     
      <main class="principal">
         <section class="presentacion">
             <div class="descripcion">
-                <h1>Mi página</h1>
+                <h1>Mi Página</h1>
                 <p>
                     Hola, yo soy Alvaro, pero pueden llamarme alvax. Esta es mi primera página web (remasterizada).
                 </p>
